# LLaVA-LE

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/: README.md  __init__.py  luminadataset.py  main.py  requirements.txt
dataset/curate/: __init__.py
dataset/curate/caption/: __init__.py  gpt.py  lunardataset.py
docs/: index.html
llava/eval/: caption_judge.py  llm.py  model_vqa_lunar.py  util.py
llava/model/: __init__.py
llava/train/: gradient_callback.py  gradient_monitor.py  loss_callback.py  params.py  train.py
scripts/: fine_tune.sh
scripts/eval/: README.md  run_eval.sh  run_eval.txt
scripts/train/: README.md  train_stage_1.sh  train_stage_2.sh
