[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llavale"
version = "1.2.2.post1"
description = "LLaVA-LE: Large Language-and-Vision Assistant for Lunar Exploration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gokce Inal" },
    { name = "Pouyan Navard" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # Core deep learning
    "torch==2.1.2",
    "torchvision==0.17.0",
    "torchaudio==2.2.0",

    # HuggingFace stack
    "transformers==4.37.2",
    "tokenizers==0.15.1",
    "huggingface_hub==1.5.0",
    "datasets==4.4.1",
    "accelerate==0.21.0",
    "peft==0.12.0",
    "safetensors==0.4.4",

    # Quantization
    "bitsandbytes==0.45.5",

    # Vision
    "pillow==10.4.0",
    "opencv-python==4.10.0.84",
    "timm==0.6.13",

    # Language / tokenization
    "sentencepiece==0.1.99",
    "tiktoken==0.7.0",
    "shortuuid==1.0.13",

    # Multimodal model components
    "einops==0.8.1",
    "einops-exts==0.0.4",

    # Serving / API
    "gradio==4.16.0",
    "gradio_client==0.8.1",
    "fastapi==0.112.0",
    "uvicorn==0.30.5",
    "requests",
    "httpx==0.24.0",
    "openai==2.5.0",

    # Data / numerics
    "numpy==2.2.6",
    "pandas==2.2.2",
    "scikit-learn==1.2.2",
    "scipy==1.15.3",
    "pyarrow==22.0.0",

    # Utilities
    "tqdm",
    "pydantic==2.12.5",
    "markdown2[all]",
    "packaging",
    "PyYAML==6.0.2",
    "psutil==7.1.3",
]

[project.optional-dependencies]
train = [
    "deepspeed==0.14.4",
    "flash-attn==2.5.6",
    "ninja",
    "wandb==0.23.0",
    "xformers==0.0.23.post1",
]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-le.github.io"
"Bug Tracker" = "https://github.com/OSUPCVLab/LLaVA-LE/issues"

[tool.setuptools.packages.find]
exclude = ["benchmark*", "docs", "dataset*", "scripts*"]

[tool.wheel]
exclude = ["benchmark*", "docs", "dataset*", "scripts*"]
